Added major improvements in onion -bowery