@@ -1,8 +1,7 @@
 package org.optigra.onionbowery.dao;
 
 import java.io.IOException;
-import java.util.Deque;
-import java.util.LinkedList;
+import java.util.List;
 
 import javax.jcr.Binary;
 import javax.jcr.Node;
@@ -12,17 +11,17 @@ import javax.jcr.ValueFormatException;
 import javax.jcr.lock.LockException;
 import javax.jcr.nodetype.ConstraintViolationException;
 import javax.jcr.nodetype.NodeType;
-import javax.jcr.version.Version;
 import javax.jcr.version.VersionException;
 import javax.jcr.version.VersionHistory;
-import javax.jcr.version.VersionIterator;
 
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.value.BinaryImpl;
 import org.optigra.onionbowery.common.exception.ContentException;
 import org.optigra.onionbowery.common.utils.jcr.JcrUtils;
+import org.optigra.onionbowery.dao.jcr.JcrHelper;
 import org.optigra.onionbowery.dao.jcr.JcrSessionFactory;
 import org.optigra.onionbowery.dao.mapper.ContentMapper;
+import org.optigra.onionbowery.dao.version.VersionRetriever;
 import org.optigra.onionbowery.model.Content;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -33,15 +32,13 @@ public class DefaultContentRepository implements ContentRepository {
 
     private static final String FOLDER = "folder";
     private static final String EMPTY_STRING = "";
-    private static final String ROOT = "/";
     
-    private static final String JCR_PREFIX = "jcr:";
     private static final String FILE = "file";
     private static final String CONTENT_TYPE = "contentType";
 
     private JcrSessionFactory sessionFactory;
-    
     private ContentMapper<Content> contentMapper;
+    private VersionRetriever versionRetriever;
     
     @Override
     public Content storeContent(final Content content) {
@@ -49,7 +46,7 @@ public class DefaultContentRepository implements ContentRepository {
         Content result = null;
         try {
             session = sessionFactory.getCurrentSession();
-            Node node = getAppropriateToContentNode(session, content);
+            Node node = storeNode(session, content);
             
             processNodeProperties(content, node);
 
@@ -66,22 +63,13 @@ public class DefaultContentRepository implements ContentRepository {
         return result;
     }
 
-    /**
-     * The method is getting your file, according path, and filename.
-     * @date Apr 4, 2014
-     * @author ivanursul
-     * @param session
-     * @param content
-     * @return
-     * @throws Exception
-     */
-    private Node getAppropriateToContentNode(final Session session, final Content content) throws Exception {
+    private Node storeNode(final Session session, final Content content) throws Exception {
         
         Node lastNode = getLastNodeFromPath(session.getRootNode(), content.getPath());
         String validFileName =  JcrUtils.getValidFilename(content.getFileName());
         
         Node node;
-        if(lastNode.hasNode(validFileName)) {
+        if(lastNode.hasNode(validFileName)) { // New Version
             node = lastNode.getNode(validFileName);
             session.getWorkspace().getVersionManager().checkout(node.getPath());
         } else {
@@ -92,19 +80,6 @@ public class DefaultContentRepository implements ContentRepository {
         return node;
     }
 
-    /**
-     * Method, that is working recursively.It will parse your path ("/users/1/images/nature"),
-     * to [users, 1, images, nature] and start from users, and check if users exists, or not exists.
-     * if exists - then nextNode will be this node, if not exists, then next node will be created.
-     * After that, function will call itself with parameters (nextNode, "/1/images/nature")
-     * 
-     * @date Apr 2, 2014
-     * @author ivanursul
-     * @param node the node, where this operations will be executing
-     * @param path current path
-     * @return The last node.
-     * @throws RepositoryException
-     */
     private Node getLastNodeFromPath(final Node node, final String path) throws RepositoryException {
         
         if (path.isEmpty()) {
@@ -146,23 +121,17 @@ public class DefaultContentRepository implements ContentRepository {
         try {
             session = sessionFactory.getCurrentSession();
             Node basicNode = session.getNode(path);
-            
-            VersionHistory history = null;
-            
-            if(!ROOT.equals(path)) {
-            	history = session.getWorkspace().getVersionManager().getVersionHistory(path);
-            }
-            Deque<String> versions = getVersions(history);
+
+            List<Content> versions = versionRetriever.getVersions(session, path);
             
             Node node  = getRequiredNode(path, versionNumber, session, versions);
             
             nodeContent = contentMapper.map(node);
             nodeContent.setVersions(versions);
-            
-            // TODO : repeating it, due to bad names in version nodes.
-            // Need to think, how to remove it.
             nodeContent.setPath(path);
             nodeContent.setFileName(basicNode.getName());
+            nodeContent.setVersion(String.valueOf(versionNumber));
+            
         } catch (Throwable e) {
             logger.warn(e.getMessage());
             throw new ContentException("Content not found", e);
@@ -171,45 +140,27 @@ public class DefaultContentRepository implements ContentRepository {
         return nodeContent;
     }
 
-    private Node getRequiredNode(final String path, final double versionNumber, final Session session, final Deque<String> versions) throws Exception {
+    private Node getRequiredNode(final String path, final double versionNumber, final Session session, final List<Content> versions) throws Exception {
         
     	VersionHistory history = null;
     	
-    	if(!ROOT.equals(path)){
+    	if(JcrHelper.isVersionable(path)) {
     		history = session.getWorkspace().getVersionManager().getVersionHistory(path);
     	}
     	
         Node node;
         
-        if(versions.size() == 0) {
+        if(versions == null || versions.size() == 0) { // No Versions
             node = session.getNode(path);
-        } else if(versionNumber == 0.0) {
-            node = history.getVersion(versions.getLast()).getFrozenNode();
+        } else if(versionNumber == 0.0) { // Default value
+            node = history.getVersion(versions.get(versions.size()-1).getVersion()).getFrozenNode();
         } else {
             node = history.getVersion(String.valueOf(versionNumber)).getFrozenNode();
         }
         
         return node;
     }
-    
-    private Deque<String> getVersions(final VersionHistory history) throws Exception {
-        LinkedList<String> versions = new LinkedList<>();
-        
-        if(history == null) {
-        	return versions;
-        }
-        
-        for (VersionIterator it = history.getAllVersions(); it.hasNext();) {
-            Version version = (Version) it.next();
-            if(!version.getName().contains(JCR_PREFIX)) {
-                versions.add(version.getName());
-            }
-        }
-        
-        return versions;
-    }
-
-
+   
     @Override
     public void deleteContent(final String contentPath) throws ContentException {
         Session session = null;
@@ -233,4 +184,9 @@ public class DefaultContentRepository implements ContentRepository {
     public void setContentMapper(final ContentMapper<Content> contentMapper) {
         this.contentMapper = contentMapper;
     }
+
+	public void setVersionRetriever(VersionRetriever versionRetriever) {
+		this.versionRetriever = versionRetriever;
+	}
+    
 }
